--- a/assets/css/academicons.css
+++ b/assets/css/academicons.css
@@ -5,12 +5,7 @@
  *  Licenses - Font: SIL OFL 1.1, CSS: MIT License
  */
 @font-face {
-    font-family: 'Academicons';
-    src:url('../fonts/academicons.eot?v=1.8.0');
-    src:url('../fonts/academicons.eot?v=1.8.0') format('embedded-opentype'),
-        url('../fonts/academicons.ttf?v=1.8.0') format('truetype'),
-        url('../fonts/academicons.woff?v=1.8.0') format('woff'),
-        url('../fonts/academicons.svg?v=1.8.0#academicons') format('svg');
+    font-family: 'Times New Roman';
     font-weight: normal;
     font-style: normal;
 }
