beautify blog UI

--- a/_includes/sidebar-tags-nav.html
+++ b/_includes/sidebar-tags-nav.html
@@ -6,10 +6,12 @@
         <ul class="list-group sticky">
             {% assign sorted_tags = site.tags | sort %}
             {% for category in sorted_tags %}
+            <a href="#{{ category[0] }}">    
             <li class="list-group-item">
-                <a href="#{{ category[0] }}">{{ category | first }}</a>
-                <span class="badge">{{ category[1].size }}</span>
+                    {{ category | first }}
+                    <span class="badge">{{ category[1].size }}</span>
             </li>
+            </a>
             {% endfor %}
         </ul>
     </div>
