--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -67,20 +67,29 @@
     text-decoration: none;
     font-size: 18px;
     font-weight: normal;
-    font-family: Lato, "PingFang SC", "Microsoft YaHei", sans-serif;
+    font-family: "Century Gothic",sans-serif;
     line-height: inherit;
+    color: #337ab7;
     /* color: #4183c4; */
-}
-.posts-list-item a:hover {
-    text-decoration: underline;
 }
 
 .posts-list-meta {
     font-size: 12px;
-    font-family: Lato, "PingFang SC", "Microsoft YaHei", sans-serif;
+    font-family: "Century Gothic",sans-serif;
     line-height: 2;
     color: #555;
-    background: #fff;
+    /* background: #fff; */
+}
+
+.posts-list-name {
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: normal;
+    font-family: "Century Gothic",sans-serif;
+    line-height: inherit;
+    color: #337ab7;
+    padding-left: 10px;
+    /* color: #4183c4; */
 }
 
 .list-group {
@@ -88,25 +97,27 @@
     margin-bottom: 20px;
 }
 
+.list-group a{
+    text-decoration: none;
+}
+
 .list-group-item {
     position: relative;
     display: block;
+    font-family: Helvetica;
     padding: 8px 15px;
-    margin-bottom: -1px;
-    background-color: #fff;
-    border: 1px solid #ddd;
+    border-bottom: 1px solid #9a9a9a;
+    background-color: #E0E0E0;
 }
 
-.list-group-item a{
-    text-decoration: none;
-    color: rgba(110, 104, 104, 0.829);
+
+.list-group-item:hover {
+    background-color: white;
 }
 
-.list-group-item a:hover {
-    text-decoration: underline;
-}
 
-.list-group-item:first-child {
+
+/* .list-group-item:first-child {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -115,7 +126,7 @@
     margin-bottom: 0;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
-}
+} */
 
 .list-group-item>.badge {
     float: right;
@@ -124,7 +135,7 @@
 .badge {
     display: inline-block;
     min-width: 10px;
-    padding: 3px 7px;
+    padding: 7px 7px;
     font-size: 12px;
     font-weight: 700;
     line-height: 1;
